# crossyword

./: Cargo.toml  README.md  build.sh  dark.css  index.html  index.js  light.css  main.css  words.txt  words2(alternate word list).txt  words2.txt
docs/: dark.css  index.html  index.js  light.css  main.css
docs/wasm/: crossyword.js  crossyword_bg.wasm
pkg/: crossyword.d.ts  crossyword_bg.wasm  crossyword_bg.wasm.d.ts  package.json
src/: generate_layout.rs  lib.rs  main.rs  words.rs
ui/: index.html  index.js
