[package]
name = "crossyword"
license = "Apache-2.0"
version = "0.2.0"
edition = "2021"
description = "A crossword puzzle written in Rust"
readme = "README.md"
repository = "https://github.com/lukasvrenner/crossyword"
categories = ["crossword", "GUI"]
keywords = ["crossword"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
wasm-bindgen = "0.2.92"

[dependencies.getrandom] # deprecation warning
features = ["js"]

[lib]
crate-type = ["cdylib"]
